decimals-functionality-added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <button class="number">7</button>
             <button class="number">8</button>
             <button class="number">9</button>
+            <button class="number"></button>
+            <button class="number">0</button>
+            <button class="number">.</button>
+            <!-- <button class="number">0</button> -->
           </div>
           <!-- <div class="math"> -->
           <button id="add" class="math">+</button>
