--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Calculator 4.0</title>
     <script src="main.js" defer></script>
     <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/styles/icons/calc.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
